--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new",
+  "name": "codesandbox-to-github",
   "version": "1.0.0",
-  "description": "",
+  "description": "Testing CodeSandbox's GitHub and now integration.",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
